# spymarine

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: publish.yml  python-package.yml
examples/: basic.py  devices_cache.py
spymarine/: __init__.py  communication.py  device_reader.py
src/spymarine/: __init__.py  communication.py  device.py  device_reader.py  property_dict.py  sensor.py
tests/: data.py  data2.py  raw_data.py  raw_data2.py  test_communication.py  test_device_reader.py
tools/: make-debug-report.py  simarine-test-server.py
tools/data/: __init__.py
