[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "spymarine"
authors = [
  { name = "Christopher Strack", email = "christopher.strack@gmail.com" },
]
description = "Communicate with Simarine devices using asyncio and Python"
version = "0.2"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["mypy", "ruff"]
test = ["pytest", "pytest-asyncio", "pytest-cov"]

[project.urls]
Documentation = "https://github.com/christopher-strack/spymarine/tree/main#readme"
Source = "https://github.com/christopher-strack/spymarine"
Tracker = "https://github.com/christopher-strack/spymarine/issues"

[tool.flit.module]
name = "spymarine"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = "tests"

[tool.ruff.lint]
extend-select = [
  "I", # isort
]
