[tool.poetry]
name = "spymarine"
version = "0.6.1"
description = "Communicate with Simarine devices using asyncio and Python"
authors = ["Christopher Strack <christopher.strack@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/christopher-strack/spymarine"
documentation = "https://github.com/christopher-strack/spymarine/tree/main#readme"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/christopher-strack/spymarine/issues"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.1"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = [
  "I", # isort
]
