[project]
name = "spymarine"
version = "0.6.3"
description = "Communicate with Simarine devices using asyncio and Python"
authors = [{ name = "Christopher Strack", email = "christopher.strack@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
"Source code" = "https://github.com/christopher-strack/spymarine"
Documentation = "https://github.com/christopher-strack/spymarine/tree/main#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "pytest-cov>=6.0.0",
]

[tool.ruff.lint]
extend-select = [
  "I", # isort
]
